--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Sedgwick+Ave&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Document</title>
+    <title>Tic Tac Toe!</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Tic Tac Toe</h1>
+      <h4>O X O</h4>
+    </header>
+    <section class="container">
+      <div class="gameboard">
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+      </div>
+    </section>
+    <section class="info">
+      <button class="restart">Restart</button>
+    </section>
+    <script src="./main.js"></script>
+  </body>
 </html>
