--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
       </div>
     </section>
     <section class="info">
+      <div class="player">
+        <input
+          type="text"
+          name="player1"
+          id="player-1"
+          placeholder="Name for Player 1"
+        />
+        <button id="submit-player1">Change name</button>
+      </div>
       <button class="restart">Restart</button>
+      <div class="player">
+        <input
+          type="text"
+          name="player2"
+          id="player-2"
+          placeholder="Name for Player 2"
+        />
+        <button id="submit-player2">Change name</button>
+      </div>
     </section>
     <script src="./main.js"></script>
   </body>
