--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </header>
     <section class="container">
+      <div class="player-turn">Player 1's turn!</div>
       <div class="gameboard">
         <div class="cell" data-cell="0"></div>
         <div class="cell" data-cell="1"></div>
@@ -51,6 +52,7 @@
     </section>
     <section class="info">
       <div class="player">
+        <!-- <div class="player-name highlight" id="display-player-1">Player 1</div> -->
         <div class="player-name" id="display-player-1">Player 1</div>
         <input
           maxlength="10"
